Refactoring and reducing cyclomatic complexity of code

--- a/tests/.jshintrc
+++ b/tests/.jshintrc
@@ -34,6 +34,7 @@
   "forin": false,
   "immed": false,
   "laxbreak": false,
+  "maxcomplexity": 8,
   "newcap": true,
   "noarg": true,
   "noempty": false,
