--- a/.jshintrc
+++ b/.jshintrc
@@ -14,6 +14,7 @@
   "forin": false,
   "immed": false,
   "laxbreak": false,
+  "maxcomplexity": 8,
   "newcap": true,
   "noarg": true,
   "noempty": false,
